Edit 'New lesson' form fields

--- a/index.html
+++ b/index.html
@@ -47,13 +47,23 @@
                             <button type="button" class="btn btn-secondary">7</button>
                         </div>
                         <div class="mb-3">
-                            <select class="form-select" id="timeslotCourseId" required>
-                                <option value="" disabled selected>Выберите дисциплину</option>
+                            <select class="form-select" id="timeslotGroupId" required>
+                                <option value="" disabled selected>Группа</option>
+                            </select>
+                        </div>
+                        <div class="mb-3">
+                            <select class="form-select" id="timeslotCoursetId" required>
+                                <option value="" disabled selected>Предмет</option>
+                            </select>
+                        </div>
+                        <div class="mb-3">
+                            <select class="form-select" id="timeslotLessonTypeId" required>
+                                <option value="" disabled selected>Вид занятия</option>
                             </select>
                         </div>
                         <div class="mb-3">
                             <select class="form-select" id="timesloRoomId" required>
-                                <option value="" disabled selected>Выберите аудиторию</option>
+                                <option value="" disabled selected>Ааудитория</option>
                             </select>
                         </div>
                         <button type="submit" class="btn btn-success w-100">
