--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     </nav>
 </header>   
 <div class="container-fluid mt-4">
-    <div class="row mb-5">
+    <div class="row mb-3">
         <div class="col-md-auto">
             <div class="card">
                 <div class="card-header bg-success text-white">
@@ -75,7 +75,16 @@
         </div>
         <div class="col"></div>
     </div>
-    <div class="row mb-5">
+    <div class="row mb-3">
+        <div class="col">
+            <div class="btn-group" role="group" aria-label="Переключение вида">
+                <button type="button" class="btn btn-secondary view-btn" id="group-view-btn">Группа</button>
+                <button type="button" class="btn btn-secondary view-btn" id="proffesor-view-btn">Преподаватель</button>
+                <button type="button" class="btn btn-secondary view-btn" id="room-view-btn">Аудитория</button>
+            </div>
+        </div>
+    </div>
+    <div class="row mb-3">
         <div class="col">
             <div class="btn-group" role="group" aria-label="Переключение вида">
                 <button type="button" class="btn btn-secondary view-btn" id="list-view-btn">Список</button>
