--- a/shift_schedules.html
+++ b/shift_schedules.html
@@ -23,9 +23,31 @@
         </div>
     </nav>
 </header>   
+
 <div class="container-fluid mt-4">
    
-  
+	<table class="table table-bordered">
+    <tr>
+        <td>Название</td>
+        <td>Оригинальное название</td>
+        <td>Год</td>
+    </tr>
+    <tr>
+        <td>Человек-паук: Возвращение домой</td>
+        <td>Spider-Man: Homecoming</td>
+        <td>2017</td>
+    </tr>
+    <tr>
+        <td>Человек-паук: Вдали от дома</td>
+        <td>Spider-Man: Far From Home</td>
+        <td>2019</td>
+    </tr>
+    <tr>
+        <td>Человек-паук: Нет пути домой</td>
+        <td>Spider-Man: No Way Home</td>
+        <td>2021</td>
+    </tr>
+</table>
 </div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
 </body>
