--- a/index.html
+++ b/index.html
@@ -13,10 +13,11 @@
     <nav class="navbar navbar-expand navbar-light bg-light">
         <div class="container-fluid">
             <div class="d-flex flex-wrap align-items-center">
-                <a class="navbar-brand me-4" href="#">Логотип</a>
+                <a class="navbar-brand me-4" href="/index.html">Логотип</a>
                 <div class="navbar-nav flex-wrap">
-                    <a class="nav-link" href="#">Расписание</a>
-                    <a class="nav-link" href="#">Загруженность аудиторий</a>										
+                    <a class="nav-link" href="/index.html">Расписание</a>
+                    <a class="nav-link" href="#">Загруженность аудиторий</a>
+                    <a class="nav-link" href="/shift_schedules.html">График преподавателей</a>
                     <a class="nav-link" href="#">Редактирование данных</a>
                 </div>
             </div>
