Переместил статику в отдельную папку

--- a/static/index.html
+++ b/static/index.html
@@ -18,7 +18,7 @@
                     <a class="nav-link" href="/index.html">Расписание</a>
                     <a class="nav-link" href="#">Загруженность аудиторий</a>
                     <a class="nav-link" href="/shift_schedules.html">График преподавателей</a>
-                    <a class="nav-link" href="#">Редактирование данных</a>
+                    <a class="nav-link" href="/data_editor.html">Редактирование данных</a>
                 </div>
             </div>
         </div>
@@ -63,7 +63,7 @@
                         </div>
                         <div class="mb-3">
                             <select class="form-select" id="timesloRoomId" required>
-                                <option value="" disabled selected>Ааудитория</option>
+                                <option value="" disabled selected>Аудитория</option>
                             </select>
                         </div>
                         <button type="submit" class="btn btn-success w-100">
